2014-09-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (move_to_goal_column): Merged into callers.
	(point_next_line, point_prev_line): Call window_compute_line_map for
	new line.
	(info_next_line, info_prev_line): Keep goal column when a numeric
	argument is used resulting in a new node being put in the window.
	(info_beginning_of_line, info_end_of_line): Don't call
	window_compute_line_map.
	(info_end_of_line): Go one past the last character in line, instead
	of right on it, for consistency with Emacs and readline.

2014-09-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (display_update_one_window): Clear lines with
	highlights in them properly.
	* info/display.c (display_update_window_1): Go to new line properly
	when highlighted region crosses line.

	* info: (all files) Change use of quotation marks.  Quote 'thusly'
	instead of `thusly' in user messages.

	* doc/info-stnd.texi (Invoking Info) <--no-raw-escapes>: Change
	explanation of what this option does.

2014-09-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_move_to_prev_xref, info_move_to_next_xref):
	Skip nodes if no references in previous or next node, as was done
	before.  Cycle round the node's references when
	cursor-movement-scrolls=Off.
	(info_move_to_xref): Handling of cursor-movement-scrolls removed.

	* info/session.c (ask_for_search_string): Don't crash if the user
	pressed return without typing anything.
	* info/t/search-empty.sh: New test.

	* info/terminal.c: (terminal_begin_standout, terminal_end_standout)
	(terminal_begin_standout_hook, terminal_end_standout_hook): New
	functions and function pointers.
	* info/display.c (display_update_window_1): For each line which
	contains part of a search match, display it using
	terminal_begin_standout and terminal_end_standout in this function and
	mark it as invalid in 'the_display'.  Remove unused argument.

2014-08-30  Gavin Smith  <gavinsmith0123@gmail.com>
